init music-manage